examples/errors/parsing/tuples-missing-comma.cn
fun swap : (int * int) -> (int * int) [pure] = {
  (x y) -> (y, x)
}

main : () [impure] = ()
